# multi-agent-deep-research

./: .gitignore  README.md
backend/: .env.example  __init__.py  config.py  main.py  pyproject.toml
backend/agents/: __init__.py  ingestion.py  knowledge.py  orchestrator.py  retrieval.py  synthesis.py  web_search.py
backend/core/: chunker.py  event_bus.py  llm_client.py  pdf_processor.py  session_manager.py  vector_store.py
backend/tools/: __init__.py  search_engine.py  web_scraper.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  api.ts  index.css  types.ts
frontend/src/components/: AgentTrace.tsx  ChatArea.tsx  InputBar.tsx  MessageBubble.tsx  SearchModal.tsx  Sidebar.tsx
